fixes spacing between inputs

--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -421,10 +421,14 @@ code {
   h1 {
     text-align: center;
     font-size: 24px;
-    color: $themeColor;
+    color: #72649f;
   }
   form {
-    padding: 40px;
+    font-family: 'Open Sans', sans-serif !important;
+    padding: 40px 15px;
+    div {
+      margin-bottom: 20px;
+    }
     label {
       text-align: left;
       position: absolute;
@@ -457,6 +461,21 @@ code {
         font-weight: normal;
         line-height: 1;
       }
+    }
+    button {
+      width: 100%;
+      color: #fff;
+      background-color: #79589f;
+      background-image: -webkit-linear-gradient(left bottom,rgba(159,88,150,0) 0,rgba(159,88,150,0.6) 100%);
+      border-radius: 5px;
+      border: none;
+      padding-left: 18px;
+      padding-right: 18px;
+      padding: 10px 16px;
+      font-size: 18px;
+      line-height: 1.33;
+      border-color: #79589f;
+
     }
   }
   input {
